# arunner

./: .gitignore  AGENTS.md  DEVELOPMENT_CONTEXT.md  README.md  SDLC.md  TOOLKIT.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json
arunner/: __init__.py  _reserve.py  cli.py
arunner/engine/: __init__.py  demo_worker.py  heartbeat.py  incontext.py  jobs.py  tick.py  ticker.py
arunner/tui/: __init__.py  app.py  data.py
docs/: ACCEPTANCE_TESTS.md  INTEGRATION_TEST_PLAN.md  PLANNED_FR61_FR62.md  REQUIREMENTS.md  TRACEABILITY.md  V0.1.0_ITERATION_PLAN.md  VALIDATION.md
docs/reviews/034_my_council/: panelist_A_console_version.md  panelist_B_publish_safety.md  synthesis.md
docs/reviews/036_my_council/: panelist_A_verdict_correctness.md  panelist_B_detector_completeness.md  (+2 more)
examples/: agent_review.json  canonical_plan.json  mixed.json  shell_jobs.json  toolkit_walkthrough.json  uc10_four_exes.jobs.json  uc10_four_exes.json  uc10_three_md_reviews.jobs.json  uc10_three_md_reviews.json  wrap_vs_tail.jobs.json  wrap_vs_tail.json
npm-bin/: arunner.js  wakecycle.js
references/: BOOTSTRAP_PROMPT.md  STATE_MACHINE.md
references/examples/: demo_shell.json  small_plan.json
reviews/002_self_council/: panelist_A_thesis_determinism.md  panelist_B_schema_contract.md  panelist_C_test_sufficiency.md  synthesis.md
reviews/030_self_council/: panelist_B_engine_fit.md  panelist_C_honesty.md  synthesis.md
reviews/034_self_council/: confirm_C_description.md  panelist_A_console_version.md  panelist_B_publish_safety.md  panelist_C_distribution_honesty.md  synthesis.md
reviews/035_self_council/: panelist_A_s9_honesty.md  panelist_B_cross_agent.md  panelist_C_fr50_regression.md  synthesis.md
reviews/036_self_council/: panelist_A_verdict_correctness.md  panelist_B_detector_completeness.md  panelist_C_honesty_regression.md  synthesis.md
reviews/042_self_council/: panelist_A_fidelity.md  panelist_B_grading_soundness.md  panelist_C_honesty_regression.md  synthesis.md
reviews/044_self_council/: panelist_A_fidelity.md  panelist_B_grading_soundness.md  panelist_C_honesty_regression.md  synthesis.md
reviews/048_self_council/: panelist_A_message_handling.md  panelist_B_ack_result_verbs.md  panelist_C_readonly_regression.md  synthesis.md
reviews/050_self_council/: panelist_A_read_only_safety.md  panelist_B_renderer_reuse_no_fork.md  panelist_C_packaging_decoupling.md  synthesis.md
reviews/051_self_council/: SYNTHESIS.md  panel_A_display_correctness.md  panel_B_readonly_boundary.md  panel_C_feature_regression.md
runner/: FR61-65_DRAFT.md  README.md
runner/instructions/: 001-land-fr61-65-spec.md  002-implement-fr61-65.md  003-fix-gate-cwd.md  004-format-collapse-single-format.md  005-fr72-subagent-liveness-rederive.md  006-continue-past-stall.md  010-fr75-retry.md  011-tui-test-isolation.md
runner/outputs/: 001-land-fr61-65-spec.md  002-implement-fr61-65.md  003-fix-gate-cwd.md  004-format-collapse-single-format.md  005-fr72-subagent-liveness-rederive.md  010-fr75-retry.md  011-tui-test-isolation.md
schemas/: job_manifest.schema.json  plan.schema.json  result.schema.json
tests/: test_acceptance_checker.py  test_acceptance_uc89101112.py  test_activity_cadence.py  test_activity_patterns.py  test_cadence_pool.py  test_cancel.py  test_check_plan.py  test_checker_independence.py  test_cli.py  test_cli_journey.py  test_clock_seam.py  test_continuation.py  test_control_files.py  test_display_reconcile.py  test_gates.py  test_heartbeat.py  test_incontext.py  test_integration_scenarios.py  test_jobs_shorthand.py  test_live_enqueue.py  test_message_channel.py  test_multistep.py  test_packaging.py  test_poll_now.py  test_positioning_honesty.py  test_preview.py  test_prompt_from_file.py  test_run_robustness.py  test_schemas.py  test_summary.py  test_tail_adapter.py  test_tick.py  test_ticker.py  test_tokens.py  test_toolkit_examples.py  test_tui.py  test_version_single_source.py  test_windows_readiness.py  test_wrap_adapter.py
tests/integration/: README.md  checker.py  runner.py  smoke.py  stub_worker.py
wakecycle/: __init__.py  _reserve.py
(+68 files in other folders)
