[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arunner"
version = "0.1.0"
description = "A batch orchestrator for AI coding agents that runs inside your existing agent session - no server, no daemon, no admin rights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Andrew Stellman", email = "andrew@stellman.com" }]
keywords = ["agent", "orchestration", "ai", "harness", "batch", "claude"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/andrewstellman/arunner"
Repository = "https://github.com/andrewstellman/arunner"

[project.scripts]
arunner = "arunner.cli:main"
arunner-ticker = "arunner.engine.ticker:main"
arunner-heartbeat = "arunner.engine.heartbeat:main"

[tool.setuptools]
packages = ["arunner", "arunner.engine"]
